--- a/package.json
+++ b/package.json
@@ -3,5 +3,8 @@
     "axios": "^1.7.3",
     "dotenv": "^16.4.5",
     "readline": "^1.3.0"
+  },
+  "scripts": {
+    "start": "node src/index.js"
   }
 }
